<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion Des Stocks</string>
    <string name="menu_settings">Settings</string>
    
    <string name="bt_val">Valider</string>
    <string name="bt_cancel">Annuler</string>
    
    <string name="bt_capture">Sortir du mode photo et valider cette identifiant</string>
    
    <string name="choix_action_title">Choisissez une action</string>
    <string name="choix_action_see">Consulter le stock</string>
    <string name="choix_action_add">Ajouter du stock</string>
    <string name="choix_action_removal">Supprimer du stock</string>
    <string name="choix_action_delete">Supprimmer produit</string>
    <string name="choix_action_stat">Statistique</string>
    
    <string name="new_art_add">Ajouter une référence</string>
    <string name="new_art_ref">Réference</string>
    <string name="new_art_nom">Nom</string>
    <string name="new_art_desc">Description</string>
    <string name="new_art_qte">Quantité</string>
    <string name="new_art_prix">Prix unitaire</string>
    
    <string name="cons_title">Vue d\'ensemble</string>
    <string name="cons_ref">Réference</string>
    <string name="cons_nom">Nom</string>
    <string name="cons_qte">Quantite</string>
    <string name="cons_desc">Description</string>
    <string name="cons_prix">Prix</string>
    
    <string name="util_photo">Prendre une photo</string>    
    <string name="util_key">Saisir une reference</string>
    
    <string name="title_activity_choix_action">Choisir une action</string>
    <string name="title_activity_new_article">Nouvel article</string>
    <string name="title_activity_result">Consultation</string>
    <string name="title_activity_add__qte">Ajouter stock</string>
    <string name="title_activity_utilisation">Choisir une action</string>
    <string name="title_activity_suppr_qte">Supprimer du stock</string>
    <string name="title_activity_add_qte">Ajouter du stock</string>
    
    <string name="exec">Execution</string>
    <string name="search">Recherche</string>
    <string name="utilisation_title">Entrez une référence</string>
    <string name="addQte">Entrez une quantité à ajouter</string>
    <string name="supprQte">Entrez une quantité à supprimer</string>
    <string name="toastPhoto">Appuyer sur l\'ecran pour prendre une photo du code à barres</string>
    <string name="toastIdDecode">L\'identifiant de l\'article est </string>
    <string name="toastConstruction">En construction</string>
    
    
    <string name="title_activity_open_id">OpenId</string>
    <string name="title_activity_popup_maison">PopupMaison</string>
    <string name="hello_world">Hello world!</string>
</resources>