<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond"
    tools:context=".NewArticle" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/new_art_add"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zt_pu"
        android:layout_alignBottom="@+id/zt_pu"
        android:layout_alignParentLeft="true"
        android:text="@string/new_art_prix" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zt_ref"
        android:layout_alignBottom="@+id/zt_ref"
        android:layout_alignParentLeft="true"
        android:text="@string/new_art_ref"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/zt_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="none" >
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zt_desc"
        android:layout_alignBottom="@+id/zt_desc"
        android:layout_alignParentLeft="true"
        android:text="@string/new_art_desc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zt_qte"
        android:layout_alignBottom="@+id/zt_qte"
        android:layout_alignParentLeft="true"
        android:text="@string/new_art_qte"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/zt_pu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/zt_qte"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/zt_qte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/zt_desc"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/zt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/zt_nom"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/zt_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/zt_ref"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zt_pu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="valider"
        android:text="@string/bt_val" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/zt_nom"
        android:layout_alignBottom="@+id/zt_nom"
        android:layout_alignParentLeft="true"
        android:text="@string/new_art_nom"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <requestFocus
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true" />

</RelativeLayout>